samples/_failures_safe/1761532435_c9a49c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bad4c495.c: In function ‘main’:
./samples/SAFE/__tmp_bad4c495.c:159: error: expected ‘}’ at end of input
./samples/SAFE/__tmp_bad4c495.c:158:28: note: to match this ‘{’
  158 |     uint8_t test_data3[] = {0x10
      |                            ^
./samples/SAFE/__tmp_bad4c495.c:158:5: error: expected declaration or statement at end of input
  158 |     uint8_t test_data3[] = {0x10
      |     ^~~~~~~
